--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 # NEXT_PUBLIC_BACKEND_URL=https://protonity.onrender.com
 NEXT_PUBLIC_BACKEND_URL=https://trainzo-backend.onrender.com
+NEXT_PUBLIC_JWT_SECRET=asdfgtyuiocvbnmqwerty4967zxcvbn173
