--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jose": "^6.0.13",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.485.0",
     "next": "15.2.3",
     "next-pwa": "^5.6.0",
