--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.485.0",
     "next": "15.2.3",
     "next-pwa": "^5.6.0",
+    "nextjs-toploader": "^3.8.16",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
